[gd_scene load_steps=3 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://OptionsMenu.tscn" type="PackedScene" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.105882, 0.164706, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.4
anchor_bottom = 0.9
custom_constants/separation = 64
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 146.0
margin_right = 307.0
margin_bottom = 166.0
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 230.0
margin_right = 307.0
margin_bottom = 250.0
text = "Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 314.0
margin_right = 307.0
margin_bottom = 334.0
text = "Exit"

[node name="OptionsMenu" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = -416.0
margin_top = -188.0
margin_right = 416.0
margin_bottom = 196.0
